# Life-Game-Microbit2

./: Cargo.toml  README.md
src/: life.rs  main.rs
