[package]
name = "poll-buttons"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
embedded-hal = "0.2"
panic-halt = "0.2"
microbit-v2 = "0.13"

[dependencies.nanorand]
version = "0.7"
features=["pcg64"]
default-features = false

[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]
